<resources>
    <string name="app_name">Mishagram</string>
    <string name="login">login</string>
    <string name="username">username:</string>
    <string name="password">password:</string>
    <string name="register">register</string>
    <string name="register_with_mishagram">Register with Mishagram</string>
    <string name="first_name">first name:</string>
    <string name="last_name">last name:</string>
    <string name="email">email:</string>
    <string name="gender">Select gender:</string>
    <string name="accept_notifications">Accept notifications</string>
    <string name="birth_date">Birth date:</string>
    <string name="log_out">log out</string>
    <string name="messages">Messages</string>
    <string name="logo">logo</string>
    <string name="contact_photo">contact photo</string>
    <string name="default_contact_name">My friend</string>
    <string name="message_text">Message text:</string>
    <string name="send">send</string>
    <string name="default_thumbnail_text">A</string>
    <string name="default_contact">John Doe</string>
    <string name="confirmation_arrow">confirmation_arrow</string>
    <string name="dummy_text">dummy text</string>
    <string name="contact_id">contact_id</string>
    <string name="notification_title">You have unread messages</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Not specified lol</item>
    </string-array>
</resources>
