<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.specter.mishagram.MessageActivity"
    android:background="@drawable/telegram_wpp_blue"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_contact_name"
            android:textColor="#000000"
            android:textSize="26sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginStart="15dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/logout_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:layout_marginStart="210dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="500dp">

        <EditText
            android:id="@+id/type_message"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/message_text"
            android:layout_gravity="center"
            android:maxLines="1"
            />

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/send"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:enabled="false"/>

    </LinearLayout>

</LinearLayout>
